# rest/handlers/server.go
@@ -15,10 +15,12 @@ func ServerResponse(params server.GetServerInfoParams) middleware.Responder {
 	name := version.GetAppName()
 	webname := info.GetWebServiceName()
 	weburl := GetWebServiceURL()
+	clusterimage := version.GetSparkImage()
 	payload := server.GetServerInfoOKBodyBody{
 		Application: &server.GetServerInfoOKBodyApplication{
 			Name: &name, Version: &vers,
-			WebServiceName: &webname, WebURL: &weburl}}
+			WebServiceName: &webname, WebURL: &weburl,
+			DefaultClusterImage: &clusterimage}}
 	return server.NewGetServerInfoOK().WithPayload(payload)
 }
 
